robot  Adding:pt <meat#1746>

--- a/wiki/meat.wikitext
+++ b/wiki/meat.wikitext
@@ -46,7 +46,9 @@
 *Swedish: [[kött]]
 *[[Tibetan]]: [[ཤ་]] (sha)
 
+[[Category:1000 English basic words]]
+
 [[it:meat]]
 [[hu:meat]]
+[[pt:Meat]]
 [[ro:Meat]]
-[[Category:1000 English basic words]]
