--- a/wiki/shame.wikitext
+++ b/wiki/shame.wikitext
@@ -19,6 +19,7 @@ While shame has a strong social element and can carry fear of being shut out of 
 *Chinese: [[羞辱]]
 *Czech: [[ostuda]] ''f''
 *Dutch: [[schande]] ''f''
+*Finnish: [[häpeä]] ''f''
 *French: [[honte]] ''f''
 *German: [[Scham]] ''f'' (1), [[Schande]] ''f'' (2)
 *Greek: [[ντροπή]] ''f''
