/* Spanish */ +pronunciation <abad#49043>

--- a/wiki/abad.wikitext
+++ b/wiki/abad.wikitext
@@ -17,6 +17,10 @@
 ----
 
 == Spanish ==
+=== Pronunciation ===
+*{{SAMPA}} /@."bAd/
+*{{IPAlink}} {{IPA|/ə.'bɑd/}}
+
 === Noun ===
 '''abad''' ''m''
 # [[abbot]]
