--- a/wiki/abadesa.wikitext
+++ b/wiki/abadesa.wikitext
@@ -1,4 +1,8 @@
 == Spanish ==
+=== Pronunciation ===
+*{{SAMPA}} /@.bAd."e(I)s.@/
+*{{IPAlink}} {{IPA|/ə.bɑd.'e(ɪ)s.ə/}}
+
 === Noun ===
 '''abadesa''' ''f''
 # [[abbess]]
