--- a/wiki/thirty-three.wikitext
+++ b/wiki/thirty-three.wikitext
@@ -7,5 +7,6 @@
 ==Translations==
 *[[Italian]]: trentatrè
 *[[Latin]]: trigintatres
+*Polish: trzydzieści jeden
 *[[Sanskrit]]: tráyastri''m''shat
 *[[Spanish]]: treintaitrés
