--- a/wiki/arg%C3%B3n.wikitext
+++ b/wiki/arg%C3%B3n.wikitext
@@ -1,1 +1,10 @@
-{{elemento|argón|argon}}
+== Spanish ==
+=== Pronunciation ===
+*{{SAMPA}} /Ar."go(U)n/
+*{{IPAlink}} {{IPA|/ɑɹ.'go(ʊ)n/}}
+=== Noun ===
+'''argón'''
+# [[argon]]
+
+[[Category:Es:elements]]
+[[Category:Spanish nouns]]
