robot  Adding:fi <memory#21061>

--- a/wiki/memory.wikitext
+++ b/wiki/memory.wikitext
@@ -119,6 +119,8 @@
 ===See also===
 *{{wikipedia}}
 *[[remember]]
-[[it:memory]]
 [[Category:Thinking]]
 [[Category:1000 English basic words]]
+
+[[it:memory]]
+[[fi:Memory]]
