robot  Adding:hu <men#4593>

--- a/wiki/men.wikitext
+++ b/wiki/men.wikitext
@@ -21,8 +21,10 @@ From Old English [[menn], plural of [[mann]].
 ===Conjunction===
 # [[but]]
 
+[[Category:200 English basic words]]
+
 [[gl:Men]]
 [[it:men]]
+[[hu:men]]
 [[fi:Man]]
 [[sv:men]]
-[[Category:200 English basic words]]
