robot  Adding:fr <mensch#39250>

--- a/wiki/mensch.wikitext
+++ b/wiki/mensch.wikitext
@@ -15,7 +15,8 @@ Yiddish, from German ''human being''
 
 [[Category:German nouns]]
 
-[[de:Mensch]]
-
 ====Translations====
 *Finnish: [[ihminen]]
+
+[[de:Mensch]]
+[[fr:Mensch]]
