robot  Adding:nl <menarche#86445>

--- a/wiki/menarche.wikitext
+++ b/wiki/menarche.wikitext
@@ -8,3 +8,5 @@ First attested [[w:1900|1900]], from {{G.}} [[Menarche]] ([[w:1895|1895]]), from
 
 ====Antonym====
 *[[menopause]]
+
+[[nl:menarche]]
