robot  Adding:de <menagerie#77624>

--- a/wiki/menagerie.wikitext
+++ b/wiki/menagerie.wikitext
@@ -3,3 +3,5 @@
 '''menagerie'''
 #A [[collection]] of [[live]] [[wild]] [[animals]] on [[exhibition]]; the [[enclosure]] where they are kept
 #A [[diverse]] or [[miscellaneous]] [[group]]
+
+[[de:Menagerie]]
