--- a/wiki/amenity.wikitext
+++ b/wiki/amenity.wikitext
@@ -7,5 +7,6 @@ French ''[[aménité]]'', Latin ''[[amoenitas]]'', from ''[[amoenus]]'', "pleasa
 #:''We especially enjoyed the '''amenity''' of the climate on our last holiday.''
 # things or [[circumstance]]s that are [[welcome]] and make life a litte [[easy|easier]] or more [[pleasant]]
 #:''All the little '''amenities''' the hotel provided made our stay very enjoyable.''
+# convenience
 ====Translations====
 *German: [[Annehmlichkeit]] ''f'' (1,2)
