--- a/wiki/amenity.wikitext
+++ b/wiki/amenity.wikitext
@@ -10,3 +10,4 @@ French ''[[aménité]]'', Latin ''[[amoenitas]]'', from ''[[amoenus]]'', "pleasa
 # convenience
 ====Translations====
 *German: [[Annehmlichkeit]] ''f'' (1,2)
+*Indonesian: [[kenyamanan]]
