/* Category:Russian adverbs */ <часто#57924>

--- a/wiki/%D1%87%D0%B0%D1%81%D1%82%D0%BE.wikitext
+++ b/wiki/%D1%87%D0%B0%D1%81%D1%82%D0%BE.wikitext
@@ -1,5 +1,8 @@
 ==Russian==
+[[Category:Russian adverbs]]
 ===Adverb===
-'''часто''' (chasto)
+'''часто''' (částo)
 
 # [[frequently]], [[often]]
+# [[close]], [[thickly]]
+#:[[дерево|деревья]] [[сажать|посажены]] часто (derév’ja posáženy částo) — ''the trees are planted close together''
