--- a/wiki/cunt.wikitext
+++ b/wiki/cunt.wikitext
@@ -33,7 +33,7 @@ Middle English ''cunte'' from common Germanic ''*kunton''. Cognates include Nort
 *Norwegian: (1, 2): [[fitte]]
 *Portuguese: [[conas]]
 *Romanian: (1, 2,,4,5,6): [[pizdă]] ''f''
-*Russian (1): [[пизда]]
+*Russian (1): [[пизда]] (pizda)
 *Slovak: (1, 2): [[piča]] ''f''
 *Spanish: (1): [[coño]]
 *Swedish: (1): [[fitta]]
