robot  Adding:et <message#63320>

--- a/wiki/message.wikitext
+++ b/wiki/message.wikitext
@@ -21,6 +21,7 @@ French, from Late Latin ''missaticum'', from Latin ''mittere'', ''missum'', to s
 *[[messenger]]
 *[[mission]]
 
+[[et:Message]]
 [[it:message]]
 [[pl:Message]]
 [[ru:Message]]
