--- a/wiki/ECCM.wikitext
+++ b/wiki/ECCM.wikitext
@@ -1,1 +1,2 @@
-It is the acronym for "electronic counter countermeasures".
+===[[Acronym]]===
+*[[electronic counter countermeasures|Electronic Counter Countermeasures]]
