/* Cardinal number */ <шесть#58893>

--- a/wiki/%D1%88%D0%B5%D1%81%D1%82%D1%8C.wikitext
+++ b/wiki/%D1%88%D0%B5%D1%81%D1%82%D1%8C.wikitext
@@ -1,12 +1,13 @@
 ==Russian==
+[[Category:Russian numbers]]
 ===Cardinal number===
-'''шесть''' (shest')
+'''шесть''' (šest’)
 
 # [[six]]
 
 ====Derived terms====
-*[[шестнадцатое]]
-*[[шестое]]
+*[[шестнадцатый]]
+*[[шестой]]
 
 [[it:шесть]]
 [[pl:Шесть]]
