sv, fmt <thirty-three#94758>

--- a/wiki/thirty-three.wikitext
+++ b/wiki/thirty-three.wikitext
@@ -1,12 +1,16 @@
-==Number==
+==English==
+===Cardinal number===
 *[[w:Arabic numerals|Arabic numerals]]: 33
 *[[w:Roman numerals|Roman numerals]]: XXXIII
 **Last: [[thirty-two]] (32)
 **Next: [[thirty-four]] (34)
 
-==Translations==
-*[[Italian]]: trentatrè
-*[[Latin]]: trigintatres
-*Polish: trzydzieści jeden
+====Translations====
+*Italian: [[trentatrè]]
+*[[Latin]]: [[trigintatres]]
+*Polish: [[trzydzieści jeden]]
 *[[Sanskrit]]: tráyastri''m''shat
-*[[Spanish]]: treintaitrés
+*Spanish: [[treintaitrés]]
+*Swedish: [[trettiotre]]
+
+[[sv:thirty-three]]
