/* Derived terms */ <шесть#58893>

--- a/wiki/%D1%88%D0%B5%D1%81%D1%82%D1%8C.wikitext
+++ b/wiki/%D1%88%D0%B5%D1%81%D1%82%D1%8C.wikitext
@@ -6,8 +6,10 @@
 # [[six]]
 
 ====Derived terms====
-*[[шестнадцатый]]
+*[[шестнадцать]]
 *[[шестой]]
+*[[шестьдесят]]
+*[[шестьсот]]
 
 [[it:шесть]]
 [[pl:Шесть]]
