sv, fmt <thirty-four#94764>

--- a/wiki/thirty-four.wikitext
+++ b/wiki/thirty-four.wikitext
@@ -1,11 +1,13 @@
-==Number==
+==English==
+===Cardinal number===
 *[[w:Arabic numerals|Arabic numerals]]: 34
 *[[w:Roman numerals|Roman numerals]]: XXXIV
 **Last: [[thirty-three]] (33)
 **Next: [[thirty-five]] (35)
 
-==Translations==
-*[[Italian]]: trentaquattro
-*[[Latin]]: triginta quattuor
+====Translations====
+*Italian: [[trentaquattro]]
+*[[Latin]]: [[triginta quattuor]]
 *[[Sanskrit]]: cátustri''m''shat
-*[[Spanish]]: treinta y cuatro
+*Spanish: [[treinta y cuatro]]
+*Swedish: [[trettiofyra]]
