--- a/wiki/ECCM.wikitext
+++ b/wiki/ECCM.wikitext
@@ -1,2 +1,3 @@
+== English ==
 ===[[Initialism]]===
-*[[electronic counter countermeasures|Electronic Counter Countermeasures]]
+* [[electronic counter-countermeasures]]
