robot  Adding:it <micron#60618>

--- a/wiki/micron.wikitext
+++ b/wiki/micron.wikitext
@@ -6,5 +6,7 @@
 
 #A measure of length; the thousandth part of one millimeter; the millionth part of a meter.
 
-[[pl:Micron]]
 [[Category:Greek derivations]]
+
+[[it:micron]]
+[[pl:Micron]]
