robot  Adding:nl <microgram#42983>

--- a/wiki/microgram.wikitext
+++ b/wiki/microgram.wikitext
@@ -11,3 +11,5 @@ A unit of [[mass]] equal to 0.000&nbsp;001 [[gram]]s and with symbol &mu;g.
 ===Translations===
 
 *Finnish: [[mikrogramma]]
+
+[[nl:microgram]]
