robot  Adding:fr <mica#60617>

--- a/wiki/mica.wikitext
+++ b/wiki/mica.wikitext
@@ -22,5 +22,6 @@
 #(''colloquial'') [[hardly]], [[you know]]
 #:''Mica sono stupido'' - I'm hardly stupid; I'm not stupid, you know
 
+[[fr:mica]]
 [[nl:mica]]
 [[pl:Mica]]
