sv, fmt <thirty-two#94754>

--- a/wiki/thirty-two.wikitext
+++ b/wiki/thirty-two.wikitext
@@ -1,11 +1,13 @@
-==Number==
+==English==
+====Cardinal number====
 *[[w:Arabic numerals|Arabic numerals]]: 32
 *[[w:Roman numerals|Roman numerals]]: XXXII
 **Last: [[thirty-one]] (31)
 **Next: [[thirty-three]] (33)
 
-==Translations==
-*[[Italian]]: trentadue
-*[[Latin]]: trigintaduo
+====Translations====
+*Italian: [[trentadue]]
+*[[Latin]]: [[trigintaduo]]
 *[[Sanskrit]]: dvaatri''m''shat
-*[[Spanish]]: treintaidós
+*Spanish: [[treintaidós]]
+*Swedish: [[trettiotvå]]
