--- a/wiki/%D1%88%D1%82%D1%83%D1%84.wikitext
+++ b/wiki/%D1%88%D1%82%D1%83%D1%84.wikitext
@@ -1,5 +1,7 @@
 ==Russian==
+[[Category:Russian nouns]]
 ===Noun===
-'''штуф''' ''m'' (shtuf) (plural: [[штуфы]])
+'''штуф''' (štuf) ''m'', штуфы (štúfy) ''pl''
 
-# [[ore]]
+#''(mining)'' a large specimen of [[ore]]
+#a lump of high-grade [[ore]]
