robot  Adding:ja <Microsoft#91037>

--- a/wiki/Microsoft.wikitext
+++ b/wiki/Microsoft.wikitext
@@ -13,3 +13,5 @@ Probably a [[blend]] from [[micro-]] and [[soft-]] as in [[software]]
 
 ====Alternative spellings====
 *[[MicroSoft]]&reg; (''obsolete'')<!-- what date or year did it change? -->
+
+[[ja:Microsoft]]
