Changes and additions in other languages <locust#27042>

--- a/wiki/locust.wikitext
+++ b/wiki/locust.wikitext
@@ -6,11 +6,13 @@
 *[[Bosnian]]: [[skakavac]] ''m'', [[cvrčak]] ''mm'', [[zrikavac]] ''m''
 *[[Catalan]]: [[llagosta]] ''f''
 *Chinese: [[蝗蟲]], [[蝗虫]]
-*Dutch: [[sprinkhaan]] ''m''
+*Dutch: [[treksprinkhaan]] ''m''
 *Finnish: [[kulkusirkka]] (1), [[heinäsirkka]] (1)
-*French: [[sauterelle]] ''f''
-*German: [[Heuschrecke]] ''f''
+*Fon: [[gbokle]]
+*French: [[locuste]] ''f'', [[criquet]] ''m''
+*German: [[Wanderheuschrecke]] ''f''
 *Greek: [[ακρίδα]] ''f''
+*Hausa: [[fàra]]
 *Hebrew:
 **[[ארבה|אַרְבֶּה]] ''m''
 **[[חגב|חָגָב]] ''m''
@@ -23,6 +25,7 @@
 *Romanian: [[lăcustă]] ''f''
 *Russian: [[саранчук]] ''m'' (saranchuk)
 *Spanish: [[langosta]] ''f''
+*Swahili: [[nzige]]
 *Swedish: [[gräshoppa]] ''c''<!-- ~ från Asien och Afrika -->
 *[[Tamil]]: [[வெட்டுக்கிளி]] (vettukkili)
 *Tibetan: [[ཚ་ག་བ་]] (tsha-ga-pa)
