--- a/wiki/bass.wikitext
+++ b/wiki/bass.wikitext
@@ -23,5 +23,6 @@ From Italian ''[[basso]]'', '''low''', from Latin ''[[bassus]]''
 # section of musical group that produces low pitched sound, lower than ''[[tenor]]''.  Also a person who sings in that range, or an instrument that plays in that range.
 # the [[clef]] sign that indicates that the pitch of the notes is below middle C.  Also called ''[[F clef]]''.
 # kind of [[fish]] of family ''Percidae''
+# a [[double bass]], [[bass guitar]], [[electric bass]] or bass [[synthesiser]]
 
 [[Category:English heteronyms]]
