--- a/wiki/concomitance.wikitext
+++ b/wiki/concomitance.wikitext
@@ -1,7 +1,9 @@
 ==English==
+===Etymology===
+First attested [[w:1607|1607]], from [[French]] [[concomitant]], from [[Latin]] [[concomitari]] ''accompany'', from [[con-]] ''together'' + [[comitari]] ''to company'', from [[comes]], [[comitis]] "companion".
 ====Noun====
 '''Concomitance'''
 #occurrence or existence together or in connection with one another
-#a concomitant
+#a [[concomitant]]
 
 {{stub}}
