sv. dewiki lang's; wiki trans's; changed header size <thirty-nine#94775>

--- a/wiki/thirty-nine.wikitext
+++ b/wiki/thirty-nine.wikitext
@@ -7,10 +7,11 @@
 *[[w:Arabic Numerals|Arabic numerals]]: 39
 *[[w:Roman numerals|Roman numerals]]: XXXIX
  
-==Translations==
-*[[Italian]]: trentanove
-*[[Latin]]: undequadraginta
+====Translations====
+*Italian: [[trentanove]]
+*[[Latin]]: undequadraginta]]
 *[[Sanskrit]]: návatri''m''shat, ekonacatvaari''m''shát
-*[[Spanish]]: treintainueve
+*Spanish: [[treintainueve]]
+*Swedish: [[trettionio]]
 
 [[Category:English cardinal numbers]]
