sv.... <forty-one#94781>

--- a/wiki/forty-one.wikitext
+++ b/wiki/forty-one.wikitext
@@ -7,10 +7,11 @@
 *[[w:Arabic Numerals|Arabic numerals]]: 41
 *[[w:Roman numerals|Roman numerals]]: XLI
  
-==Translations==
-*[[Italian]]: quarantuno
-*[[Latin]]: quadraginta unus
+====Translations====
+*Italian: [[quarantuno]]
+*[[Latin]]: [[quadraginta unus]]
 *[[Sanskrit]]: ékacatvaari''m''shat
-*[[Spanish]]: cuarenta y uno
+*Spanish: [[cuarenta y uno]]
+*Swedish: [[fyrtiett]]
 
 [[Category:English cardinal numbers]]
