robot  Adding:pl <milk#28717>

--- a/wiki/milk.wikitext
+++ b/wiki/milk.wikitext
@@ -171,7 +171,9 @@
 *[[dairy produce]]
 *[[w:milk|Wikipedia article on milk]]
 
+[[Category:1000 English basic words]]
+
 [[fr:milk]]
 [[it:milk]]
+[[pl:Milk]]
 [[sv:milk]]
-[[Category:1000 English basic words]]
