--- a/wiki/milieu.wikitext
+++ b/wiki/milieu.wikitext
@@ -11,5 +11,6 @@ Environment, setting or surroundings.
 * [http://dictionary.reference.com/search?q=milieux&r=67 Dictionary.com]
 
 [[et:Milieu]]
+[[fr:milieu]]
 [[nl:milieu]]
 [[pl:Milieu]]
