sv... <thirty-eight#92513>

--- a/wiki/thirty-eight.wikitext
+++ b/wiki/thirty-eight.wikitext
@@ -7,10 +7,11 @@
 *[[w:Arabic Numerals|Arabic numerals]]: 38
 *[[w:Roman numerals|Roman numerals]]: XXXVIII
  
-==Translations==
-*[[Italian]]: trentaotto
-*[[Latin]]: duodequadraginta
+====Translations====
+*Italian: [[trentaotto]]
+*[[Latin]]: [[duodequadraginta]]
 *[[Sanskrit]]: a<u>st</u>aatri''m''shat
-*[[Spanish]]: treintaiocho
+*Spanish: [[treintaiocho]]
+*Swedish: [[trettioåtta]]
 
 [[Category:English cardinal numbers]]
