sv; fmt <forty-two#72514>

--- a/wiki/forty-two.wikitext
+++ b/wiki/forty-two.wikitext
@@ -1,14 +1,15 @@
-{{-en-}}
+=={{en}}==
 ===Noun phrase===
 '''forty-two'''
 
 #Forty plus two; the cardinal number following [[forty-one]] and preceding [[forty-three]].
 
 ==Translations==
-*[[Italian]]: quarantadue
-*[[Latin]]: quadraginta duo
+*Italian: [[quarantadue]]
+*[[Latin]]: [[quadraginta duo]]
 *[[Sanskrit]]: dvaacatvaari''m''shat
-*[[Spanish]]: cuarenta y dos
+*Spanish: [[cuarenta y dos]]
+*Swedish: [[fyrtiotvå]]
 
 
 ===See also===
