sv <thirty-seven#94770>

--- a/wiki/thirty-seven.wikitext
+++ b/wiki/thirty-seven.wikitext
@@ -1,11 +1,13 @@
-==Number==
+==English==
+===Number===
 *[[w:Arabic numerals|Arabic numerals]]: 37
 *[[w:Roman numerals|Roman numerals]]: XXXVII
 **Last: [[thirty-six]] (36)
 **Next: [[thirty-eight]] (38)
 
-==Translations==
-*[[Italian]]: trentasette
-*[[Latin]]: trigintaseptem
+====Translations====
+*Italian: [[trentasette]]
+*[[Latin]]: [[trigintaseptem]]
 *[[Sanskrit]]: saptátri''m''shat
-*[[Spanish]]: treintaisiete
+*Spanish: [[treintaisiete]]
+*Swedish: [[trettiosju]]
