robot  Adding:et <million#3844>

--- a/wiki/million.wikitext
+++ b/wiki/million.wikitext
@@ -82,6 +82,7 @@ From Italian '''[[milione]]''', ''million'', from '''[[mille]]''', ''thousand'',
 [[Category:French numbers]]
 
 [[de:Million]]
+[[et:Million]]
 [[fr:million]]
 [[it:million]]
 [[pl:Million]]
