sv <forty-three#94791>

--- a/wiki/forty-three.wikitext
+++ b/wiki/forty-three.wikitext
@@ -7,10 +7,11 @@
 *[[w:Arabic Numerals|Arabic numerals]]: 43
 *[[w:Roman numerals|Roman numerals]]: XLIII
  
-==Translations==
-*[[Italian]]: quarantatrè
-*[[Latin]]: quadraginta tres
+====Translations====
+*Italian: [[quarantatrè]]
+*[[Latin]]: [[quadraginta tres]]
 *[[Sanskrit]]: tráyashcatvaari''m''shat, tricatvaari''m''shat
-*[[Spanish]]: cuarenta y tres
+*Spanish: [[cuarenta y tres]]
+*Swedish: [[fyrtiotre]]
 
 [[Category:English cardinal numbers]]
