sv <thirty-six#94767>

--- a/wiki/thirty-six.wikitext
+++ b/wiki/thirty-six.wikitext
@@ -1,11 +1,13 @@
-==Number==
+==English==
+===Number===
 *[[w:Arabic numerals|Arabic numerals]]: 36
 *[[w:Roman numerals|Roman numerals]]: XXXVI
 **Last: [[thirty-five]] (35)
 **Next: [[thirty-seven]] (37)
 
-==Translations==
-*[[Italian]]: trentasei
-*[[Latin]]: trigintasex
+====Translations====
+*Italian: [[trentasei]]
+*[[Latin]]: [[trigintasex]]
 *[[Sanskrit]]: <u>s</u>á<u>t</u>tri''m''shat
-*[[Spanish]]: treintaiseis
+*Spanish: [[treintaiseis]]
+*Swedish: [[trettiosex]]
