sv <forty-four#94792>

--- a/wiki/forty-four.wikitext
+++ b/wiki/forty-four.wikitext
@@ -7,10 +7,11 @@
 *[[w:Arabic Numerals|Arabic numerals]]: 44
 *[[w:Roman numerals|Roman numerals]]: XLIV, XLIIII
  
-==Translations==
-*[[Italian]]: quarantaquattro
-*[[Latin]]: quadraginta quattuor
+====Translations====
+*Italian: [[quarantaquattro]]
+*[[Latin]]: [[quadraginta quattuor]]
 *[[Sanskrit]]: cátushcatvaari''m''shat
-*[[Spanish]]: cuarenta y cuatro
+*Spanish: [[cuarenta y cuatro]]
+*Swedish: [[fyrtiofyra]]
 
 [[Category:English cardinal numbers]]
