--- a/wiki/fiddle.wikitext
+++ b/wiki/fiddle.wikitext
@@ -5,20 +5,27 @@ From the Middle English, ''fithele'', which comes from Old English, fithelere. S
 The ultimate root is unknown. Some argue that the similarity in Germanic variations can be explained by adoption and subsequent corruption of a contemporary Latin word, ''vitula, vidula''. This is known to have occured with the Romance languages eg. viol or viola in French, Portugese, Italian and Spanish. Others argue that the Germanic words have a uniquely Teutonic origin, but no earlier forms have been found.
 
 ==Noun==
+'''fiddle'''
 # The [[violin]] when played in any of various traditional styles, as opposed to classical violin.
 #: ''When I play it like this, it's a fiddle; when I play it like that, it's a violin.''
 # An adjustment intended to cover up a basic flaw.
 #: ''That parameter setting is just a fiddle to make the lighting look right.''
+# [[fraud]]
 
 ==Verb==
+'''to fiddle'''
 # To play aimlessly.
 #: ''You're fiddling your life away.''
-# To adjust in order to cover a basic flaw.
+# To adjust in order to cover a basic flaw or fraud etc.
 #: ''I needed to fiddle the lighting parameters to get the image to look right.''
+#: ''Fred was sacked when the auditors caught him fiddling the books.''
 
 ===Related Terms===
 *[[fiddle about]]
 *[[fiddle around]]
+*[[fiddle brake]]
+*[[fiddle factor]]
+*[[fiddle the books]]
 *[[fiddle with]]
 *[[fiddler]]
 *[[fiddly]]
