sv <thirty-five#94765>

--- a/wiki/thirty-five.wikitext
+++ b/wiki/thirty-five.wikitext
@@ -1,11 +1,13 @@
-==Number==
+=={{en}}==
+===Number===
 *[[w:Arabic numerals|Arabic numerals]]: 35
 *[[w:Roman numerals|Roman numerals]]: XXXV
 **Last: [[thirty-four]] (34)
 **Next: [[thirty-six]] (36)
 
 ====Translations====
-*Italian: trentacinque
-*Latin: trigintaquinque
+*Italian: [[trentacinque]]
+*Latin: [[trigintaquinque]]
 *[[Sanskrit]]: (páñcatri''m''shat)
-*Spanish: treintaicinco
+*Spanish: [[treintaicinco]]
+*Swedish: [[trettiofem]]
