sv <forty-five#48602>

--- a/wiki/forty-five.wikitext
+++ b/wiki/forty-five.wikitext
@@ -1,12 +1,14 @@
-==Cardinal Number==
+=={{en}}==
+===Cardinal Number===
 '''forty-five'''
 
 # 45; cardinal number after ''[[forty-four]]'' and before ''[[forty-six]]''
 
 Ordinal: forty-fifth
 
-==Translations==
-*[[Italian]]: quarantacinque
-*[[Latin]]: quadraginta quinque
+====Translations====
+*Italian: [[quarantacinque]]
+*[[Latin]]: [[quadraginta quinque]]
 *[[Sanskrit]]: páñcacatvaari''m''shat 
-*[[Spanish]]: cuarenta y cinco
+*Spanish: [[cuarenta y cinco]]
+*Swedish: [[fyrtiofem]]
