sv <forty-six#94794>

--- a/wiki/forty-six.wikitext
+++ b/wiki/forty-six.wikitext
@@ -7,10 +7,10 @@
 *[[w:Arabic Numerals|Arabic numerals]]: 46
 *[[w:Roman numerals|Roman numerals]]: XLVI
  
-==Translations==
-*[[Italian]]: quarantasei
-*[[Latin]]: quadraginta sex
+====Translations====
+*Italian: [[quarantasei]]
+*[[Latin]]: [[quadraginta sex]]
 *[[Sanskrit]]: <u>s</u>á<u>t</u>catvaarimshat
-*[[Spanish]]: cuarenta y seis
-
+*Spanish: [[cuarenta y seis]]
+*Swedish: [[fyrtiosex]]
 [[Category:English cardinal numbers]]
