sv <forty-seven#94795>

--- a/wiki/forty-seven.wikitext
+++ b/wiki/forty-seven.wikitext
@@ -7,10 +7,11 @@
 *[[w:Arabic Numerals|Arabic numerals]]: 47
 *[[w:Roman numerals|Roman numerals]]: XLVII
  
-==Translations==
-*[[Italian]]: quarantasette
-*[[Latin]]: quadraginta septem
+====Translations====
+*Italian: [[quarantasette]]
+*[[Latin]]: [[quadraginta septem]]
 *[[Sanskrit]]: saptácatvaari''m''shat
-*[[Spanish]]: cuarenta y siete
+*Spanish: [[cuarenta y siete]]
+*Swedish: [[fyrtiosju]]
 
 [[Category:English cardinal numbers]]
