sv <forty-eight#94796>

--- a/wiki/forty-eight.wikitext
+++ b/wiki/forty-eight.wikitext
@@ -8,9 +8,10 @@
 *[[w:Roman numerals|Roman numerals]]: XLVIII, XXXXVIII
  
 ====Translations====
-*Italian: quarantaotto
-*Latin: duodequinquaginta
+*Italian: [[quarantaotto]]
+*Latin: [[duodequinquaginta]]
 *[[Sanskrit]]: (a<u>st</u>acatvaari''m''shat)
-*Spanish: cuarenta y ocho
+*Spanish: [[cuarenta y ocho]]
+*Swedish: [[fyrtioåtta]]
 
 [[Category:English cardinal numbers]]
