sv <forty-nine#94798>

--- a/wiki/forty-nine.wikitext
+++ b/wiki/forty-nine.wikitext
@@ -8,9 +8,10 @@
 *[[w:Roman numerals|Roman numerals]]: XLIX, XXXXVIIII
  
 ==Translations==
-*[[Italian]]: quarantanove
-*[[Latin]]: undequinquaginta
+*Italian: [[quarantanove]]
+*[[Latin]]: [[undequinquaginta]]
 *[[Sanskrit]]: návacatvaari''m''shat, ekonapañcaashát
-*[[Spanish]]: cuarenta y nueve
+*Spanish: [[cuarenta y nueve]]
+*Swedish: [[fyrtionio]]
 
 [[Category:English cardinal numbers]]
