--- a/wiki/tread.wikitext
+++ b/wiki/tread.wikitext
@@ -3,12 +3,16 @@
 *[[w:SAMPA|SAMPA]]: /'/
 *[[w:IPA|IPA]]: /'tɻεd/
 
+=== Noun ===
+# the [[grooves]] carved into the face of a [[tire]], used to give the tire [[traction]].
+# the bottom of a [[sneaker]] or tennis shoe, also used to give it traction.
+# the top of a step on a staircase, also called a [[run]] (noun, definition 22)
 === Verb ===
 {{en-infl-reg-consonant|tread||}}
 
 '''to tread''' ([[trod]], [[trodden]] / trod)
 
-# to [[step]] somewhere 
+# to [[step]] somewhere
 
 === Translations ===
 *[[Dutch]]: [[betreden]]
