sv <fifty-one#94802>

--- a/wiki/fifty-one.wikitext
+++ b/wiki/fifty-one.wikitext
@@ -7,10 +7,10 @@
 *[[w:Arabic Numerals|Arabic numerals]]: 51
 *[[w:Roman numerals|Roman numerals]]: LI
  
-==Translations==
-*[[Italian]]: cinquantuno
-*[[Latin]]: quinquaginta unus
+====Translations====
+*Italian: [[cinquantuno]]
+*[[Latin]]: [[quinquaginta unus]]
 *[[Sanskrit]]: ékapañcaashat
-*[[Spanish]]: cincuenta y uno
-
+*Spanish: [[cincuenta y uno]]
+*Swedish: [[femtioett]]
 [[Category:English cardinal numbers]]
