robot  Adding:gl <abbey#307>

--- a/wiki/abbey.wikitext
+++ b/wiki/abbey.wikitext
@@ -55,4 +55,5 @@ A male head of an abbey is an [[abbot]]; a female head is an [[abbess]].
 
 [[Category:English concrete nouns]]
 
+[[gl:Abbey]]
 [[it:abbey]]
