robot  Adding:fi,gl <abbess#306>

--- a/wiki/abbess.wikitext
+++ b/wiki/abbess.wikitext
@@ -20,3 +20,6 @@ Old French ''abaesse'', ''abeesse'', French ''abbesse'', Latin ''abbatissa'', fe
 *[[Spanish]]: [[Abadesa]]
 *Swedish: [[abedissa]]
 *[[Volapük]]: [[jilepädan]]
+
+[[gl:Abbess]]
+[[fi:Abbess]]
