sv <fifty-two#94803>

--- a/wiki/fifty-two.wikitext
+++ b/wiki/fifty-two.wikitext
@@ -7,10 +7,11 @@
 *[[w:Arabic Numerals|Arabic numerals]]: 52
 *[[w:Roman numerals|Roman numerals]]: LII
  
-==Translations==
-*[[Italian]]: cinquantadue
-*[[Latin]]: quinquaginta duo
+===Translations====
+*Italian: [[cinquantadue]]
+*[[Latin]]: [[quinquaginta duo]]
 *[[Sanskrit]]: dvipañcaashat, dvaapañcaashat
-*[[Spanish]]: cincuenta y dos
+*Spanish: [[cincuenta y dos]]
+*Swedish: [[femtiotvå]]
 
 [[Category:English cardinal numbers]]
