--- a/wiki/fifty-two.wikitext
+++ b/wiki/fifty-two.wikitext
@@ -7,7 +7,7 @@
 *[[w:Arabic Numerals|Arabic numerals]]: 52
 *[[w:Roman numerals|Roman numerals]]: LII
  
-===Translations====
+====Translations====
 *Italian: [[cinquantadue]]
 *[[Latin]]: [[quinquaginta duo]]
 *[[Sanskrit]]: dvipañcaashat, dvaapañcaashat
