--- a/wiki/%D1%89%D0%B5%D0%BD%D0%BE%D0%BA.wikitext
+++ b/wiki/%D1%89%D0%B5%D0%BD%D0%BE%D0%BA.wikitext
@@ -1,7 +1,47 @@
 ==Russian==
+[[Category:Russian nouns]]
 ===Noun===
-'''щенок''' ''m'' (shchenok) (plural: [[щенята]] (shchenyata)
+'''щенок''' (ščenók) ''m'', щенки (ščenkí) ''pl'', щенята (ščenjáta) ''pl''
 
 # [[puppy]]
-#(pejorative) [[cub]]; [[snot]]; [[son of a bitch]]
-#: ''"Ах ты щенок! Да как же у тебя язык повернулся сказать такое?"'' &mdash; ''"You son of a bitch! How could you say something like that?"''; ''"Son of a bitch! What a [[bitchy]] thing to say!"''
+#''(wild animals)'' [[cub]], [[whelp]]
+#''(pejorative)'' [[snot]]; [[son of a bitch]]
+#: [[Ах]] [[ты]] щенок! [[Да]] [[как]] [[же]] [[у]] [[ты|тебя]] [[язык]] [[поворачивать|повернулся]] [[говорить|сказать]] [[такой|такое]]? — ''You son of a bitch! How could you say something like that?''
+
+===Declension===
+{| border="1" cellpadding="4" cellspacing="0"
+!
+! style="background-color: #EFEFFF" align="center"|[[singular]]
+! style="background-color: #EFEFFF" align="center"|[[plural]]
+! style="background-color: #EFEFFF" align="center"|[[plural]]
+|-
+! style="background-color: #FFFFE0" align="left"|[[nominative case|nominative]]
+| align="center"|{{Unicode|щено́к}}
+| align="center"|{{Unicode|щенки́}}
+| align="center"|{{Unicode|щеня́та}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[genitive case|genitive]]
+| align="center"|{{Unicode|щенка́}}
+| align="center"|{{Unicode|щенко́в}}
+| align="center"|{{Unicode|щеня́т}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[dative case|dative]]
+| align="center"|{{Unicode|щенку́}}
+| align="center"|{{Unicode|щенка́м}}
+| align="center"|{{Unicode|щеня́там}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[accusative case|accusative]]
+| align="center"|{{Unicode|щенка́}}
+| align="center"|{{Unicode|щенко́в}}
+| align="center"|{{Unicode|щеня́т}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[instrumental case|instrumental]]
+| align="center"|{{Unicode|щенко́м}}
+| align="center"|{{Unicode|щенка́ми}}
+| align="center"|{{Unicode|щеня́тами}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[prepositional case|prepositional]]
+| align="center"|{{Unicode|о щенке́}}
+| align="center"|{{Unicode|о щенка́х}}
+| align="center"|{{Unicode|о щеня́тах}}
+|}
