robot  Adding:et,ru <minute#158>

--- a/wiki/minute.wikitext
+++ b/wiki/minute.wikitext
@@ -179,10 +179,13 @@ The translations below need to be checked by native speakers and inserted into t
 #minute (''unit of time'')
 <!--needs to be checked #minute (3)-->
 
+[[Category:1000 English basic words]]
+
 [[de:Minute]]
+[[et:Minute]]
 [[fr:minute]]
 [[it:minute]]
 [[nl:minute]]
 [[pl:Minute]]
+[[ru:Minute]]
 [[sv:minute]]
-[[Category:1000 English basic words]]
