--- a/wiki/social.wikitext
+++ b/wiki/social.wikitext
@@ -3,11 +3,21 @@
 ===Noun===
 '''social'''
 #A festive gathering to foster introductions
+#(UK slang) short for [[social security]] benefit, the UK government department responsible for administering such benefit or its employees. [[welfare]]
+#:''Fred hated going down the '''social''' to [[sign on]].''
 
 ===Adjective===
 #Being [[extrovert]]ed or outgoing
 #Needing (nearly) constant human interaction
+#related to [[society]]
 
 [[es:social]]
 [[fr:social]]
 [[pl:Social]]
+
+===See also===
+*[[social conscience]]
+*[[social security]]
+*[[social science]], [[social studies]]
+*[[social worker]]
+*[[socialist]]
