robot  Adding:it <mishap#98803>

--- a/wiki/mishap.wikitext
+++ b/wiki/mishap.wikitext
@@ -3,3 +3,5 @@
 '''mishap'''
 # (countable) an [[accident]], [[mistake]], or [[problem]]
 #:''After the '''mishap''' with the banana peel, he is watching his step now.''
+
+[[it:mishap]]
