--- a/wiki/socialist.wikitext
+++ b/wiki/socialist.wikitext
@@ -1,12 +1,13 @@
+==English==
 ===Adjective===
 '''socialist'''
 
-1.)Of, promoting, or practicing [[socialism]]. 
-
-2.)Socialist Of, belonging to, or constituting a socialist party or political group.
+#Of, promoting, or practicing [[socialism]]. 
+#Socialist Of, belonging to, or constituting a socialist party or political group.
 
 ===Noun===
 '''socialist''' (plural: [[socialists]])
+{{substub}}
 
 ===Related terms===
 *[[socialism]]
