/* Translations */ <scalar product#35193>

--- a/wiki/scalar_product.wikitext
+++ b/wiki/scalar_product.wikitext
@@ -11,3 +11,4 @@
 *French: [[produit scalaire]] ''m''
 *Italian: [[prodotto scalare]] ''m'', [[prodotto interno]] ''m''
 *Swedish: [[skalärprodukt]] ''c''
+*German: [[Skalarprodukt]] ''n''
