robot  Adding:et,fi,nl,ja,pl,sv,fr,it <Mittwoch#90619>

--- a/wiki/Mittwoch.wikitext
+++ b/wiki/Mittwoch.wikitext
@@ -5,4 +5,13 @@ Literally meaning "midweek", from [[mit]] "mid" and [[Woch]] "week".
 #[[Wednesday]], the day following [[Tuesday]] and preceeding [[Thursday]]. In German Mittwoch follows [[Dienstag]] and preceeds [[Donnerstag]].
 
 [[Category:German days of the week]]
+
 [[de:Mittwoch]]
+[[et:Mittwoch]]
+[[fr:Mittwoch]]
+[[it:Mittwoch]]
+[[nl:Mittwoch]]
+[[ja:Mittwoch]]
+[[pl:Mittwoch]]
+[[fi:Mittwoch]]
+[[sv:Mittwoch]]
