--- a/wiki/bindii.wikitext
+++ b/wiki/bindii.wikitext
@@ -1,6 +1,14 @@
 ==English==
-===Proper Noun===
-Lawn weed common to Australia, with a small stinging nettle.
-
+===Other spellings===
+*[[bindi-eye]]
+*[[bindy-eye]]
+*[[bindy]]
+===Etymology===
+From Gamilaraay [[bindayaa]].
 ===Pronunciation===
-Bin.dee.eye
+*bĭn'''′'''dē-ī′
+*bĭn'''′'''dē
+===Noun===
+'''bindii''' ''(Australian)''
+#Lawn weed common to Australia, with a small stinging nettle.
+#A burr from this weed
