robot  Adding:sv Modifying:fr <mm#29431>

--- a/wiki/mm.wikitext
+++ b/wiki/mm.wikitext
@@ -1,11 +1,34 @@
-*Number of the Roman numeral '''MM''' (2,000)
-**Previous: MCMXCIX (1,999), M (1000)
-**Next: MMI (2,001), [[MMM]] (3,000)
+==[[English]]==
 
-# A [[Roman numeral]] representing two-thousand ([[two thousand|2,000]]).
+===[[Abbreviation]]===
+'''mm'''
 
-==French==
+#[[millimetre]], [[milimeter]]
+
+----
+
+===Official Scrabble® Players Dictionary===
+'''mm'''
+# To express assent
+
+----
+
+===[[Abbreviation]]===
+'''mm.'''
+
+# [[muun muassa]]
+
+----
+
+==[[French]]==
+
+===[[Abbreviation]]===
 '''MM'''
-===Abbreviation===
-[[Messieurs]]
-[[fi:MM]]
+
+#[[Messieurs]]
+
+[[de:mm]]
+[[fr:mm]]
+[[it:mm]]
+[[fi:Mm]]
+[[sv:mm]]
