robot  Adding:gl,nl <abdomen#329>

--- a/wiki/abdomen.wikitext
+++ b/wiki/abdomen.wikitext
@@ -74,6 +74,8 @@ Latin ''abdomen'', of uncertain origin; compare French ''abdomen''
 
 [[de:Abdomen]]
 [[fr:abdomen]]
+[[gl:Abdomen]]
 [[it:abdomen]]
+[[nl:abdomen]]
 [[ru:Abdomen]]
 [[sv:abdomen]]
