robot  Adding:gl <abdicate#323>

--- a/wiki/abdicate.wikitext
+++ b/wiki/abdicate.wikitext
@@ -38,5 +38,6 @@ Present participle and verbal noun: [[abdicating]]
 ===Derived terms===
 * [[abdication]]
 
+[[gl:Abdicate]]
 [[it:abdicate]]
 [[pt:Abdicate]]
