robot  Adding:pt,de <aberration#358>

--- a/wiki/aberration.wikitext
+++ b/wiki/aberration.wikitext
@@ -37,4 +37,6 @@ Latin ''[[aberratio]]'': compare French ''[[aberration]]''. See [[Aberrate]]
 <b>aberration</b> ''f''
 #[[aberration]]
 
+[[de:Aberration]]
+[[pt:Aberration]]
 [[sv:aberration]]
