robot  Adding:nl <aberrant#356>

--- a/wiki/aberrant.wikitext
+++ b/wiki/aberrant.wikitext
@@ -12,3 +12,4 @@ Latin ''[[aberrans]]'', ''-rantis'', present participle of ''[[aberrare]]''. See
 
 [[fr:aberrant]]
 [[it:aberrant]]
+[[nl:aberrant]]
