robot  Adding:sv <abelian#349>

--- a/wiki/abelian.wikitext
+++ b/wiki/abelian.wikitext
@@ -54,3 +54,5 @@ Name of the Norwegian mathematician [[w:Niels Henrik Abel|Abel]] + [[-ian]].
 *[[Abelian group]]
 *[[Abelian operation]] <!-- less widely attested -->
 *[[Abelian ring]]
+
+[[sv:abelian]]
