robot  Adding:hu <molecule#70605>

--- a/wiki/molecule.wikitext
+++ b/wiki/molecule.wikitext
@@ -7,4 +7,5 @@ French, from (New) Latin, ''molecula'', diminutive of Latin ''moles'' mass
 # a [[tiny]] [[amount]]
 
 [[it:molecule]]
+[[hu:molecule]]
 [[nl:molecule]]
