robot  Adding:zh <monkey#37284>

--- a/wiki/monkey.wikitext
+++ b/wiki/monkey.wikitext
@@ -51,8 +51,10 @@
 *[[spank the monkey]]
 
 
+[[Category:1000 English basic words]]
+
 [[es:monkey]]
 [[it:monkey]]
 [[nl:monkey]]
 [[sv:monkey]]
-[[Category:1000 English basic words]]
+[[zh:Monkey]]
