robot  Adding:nl <monitoring#37106>

--- a/wiki/monitoring.wikitext
+++ b/wiki/monitoring.wikitext
@@ -5,3 +5,5 @@
 #The act of listening, carrying out surveillance on, and/or recording of [[enemy]] emissions for [[intelligence]] purposes.  
 #The act of [[detecting]] the presence of signals, such as [[electromagnetic radiation]], [[sound]], or visual signals, and the measurement thereof with appropriate measuring instruments. 
 #The act of detecting the presence of [[radiation]] and the measurement thereof with radiation measuring instruments.
+
+[[nl:monitoring]]
