robot  Adding:fi <monitor#50303>

--- a/wiki/monitor.wikitext
+++ b/wiki/monitor.wikitext
@@ -67,3 +67,4 @@ From Latin '''[[monitor]]''', '''[[warner]]''', from perfect passive participle 
 [[de:Monitor]]
 [[es:monitor]]
 [[pl:Monitor]]
+[[fi:Monitor]]
