robot  Adding:it <monopoly#33663>

--- a/wiki/monopoly.wikitext
+++ b/wiki/monopoly.wikitext
@@ -51,3 +51,5 @@ Latin [[monopolia]], from Greek ''monopolion'', from ''mon'' + ''polein'', to [[
 
 ====See also====
 *[[w:Monopoly (game)|Wikipedia article on Monopoly&reg;]]
+
+[[it:monopoly]]
