robot  Adding:pl,it <monopolio#98850>

--- a/wiki/monopolio.wikitext
+++ b/wiki/monopolio.wikitext
@@ -15,3 +15,6 @@ monopòlio, /monoˈpɔljo/, /<tt>mono"pOljo</tt>/
 ===Related terms===
 *[[monopolista]]
 *[[monopolizzare]]
+
+[[it:monopolio]]
+[[pl:Monopolio]]
