robot  Adding:fi <moor#40049>

--- a/wiki/moor.wikitext
+++ b/wiki/moor.wikitext
@@ -55,5 +55,7 @@ Prob. fr. D. [[marren]] to tie, fasten, or moor a ship. See [[Mar]].
 
 
 [[Category:English words with multiple etymologies]]
+
 [[de:Moor]]
 [[fr:Moor]]
+[[fi:Moor]]
