robot  Adding:zh <moon#4403>

--- a/wiki/moon.wikitext
+++ b/wiki/moon.wikitext
@@ -160,7 +160,9 @@ The translations below need to be checked by native speakers and inserted into t
 ===See also===
 *[[lunar]]
 
+[[Category:1000 English basic words]]
+
 [[es:moon]]
 [[it:moon]]
 [[ru:Moon]]
-[[Category:1000 English basic words]]
+[[zh:Moon]]
