robot  Adding:gl <abolish#480>

--- a/wiki/abolish.wikitext
+++ b/wiki/abolish.wikitext
@@ -41,5 +41,6 @@ French ''[[abolir]]'', Latin ''[[abolere]]'', ''[[aboletum]]''; ''[[ab]]'' + ''[
 *Swedish: [[överge]] (1), [[förkasta]] (1)
 *[[Volapük]]: [[säkibön]], [[finidön]]
 
+[[gl:Abolish]]
 [[it:abolish]]
 [[pt:Abolish]]
