robot  Adding:gl <abnormal#469>

--- a/wiki/abnormal.wikitext
+++ b/wiki/abnormal.wikitext
@@ -24,4 +24,5 @@ A replacement for the earlier ''anormal'' French ''[[anormal]]'', Late Latin ''[
 *Swedish: [[abnorm]]
 *Volapük: [[nenomik]]
 
+[[gl:Abnormal]]
 [[it:abnormal]]
