robot  Adding:pt,et <abomination#497>

--- a/wiki/abomination.wikitext
+++ b/wiki/abomination.wikitext
@@ -17,4 +17,6 @@ Old English ''[[abominacioun]]'', ''-cion'', French ''[[abominatio]]''. See [[ab
 #[[abomination]] 1. [[loathing]] 2. [[loathsome]] [[object]]
 
 [[de:abomination]]
+[[et:Abomination]]
+[[pt:Abomination]]
 [[zh:Abomination]]
