robot  Adding:fr <abolition#485>

--- a/wiki/abolition.wikitext
+++ b/wiki/abolition.wikitext
@@ -23,4 +23,5 @@ Latin ''[[abolitio]]'', from ''[[abolere]]'': cf. French ''abolition''. See [[ab
 <b>abolition</b> ''f''
 #[[abolition]], [[abolishment]]
 
+[[fr:abolition]]
 [[it:abolition]]
