--- a/wiki/sarcasm.wikitext
+++ b/wiki/sarcasm.wikitext
@@ -15,7 +15,7 @@ Sarcasm is the making of remarks intended to [[mock]] the person referred to (wh
 The word comes from the [[Late Latin]] word, ''[[sarcasmus]''], which, in turn, comes from the [[Greek]] ''[[sarkasmos]]'', from ''[[sarkazein]]'' - to bite the lips in rage,- from ''[[sarx]'', ''[[sark-]]'', ''[[flesh]]''.
 
 ===Translations===
-*Chinese: [[讽刺]] (fèng cì)
+*Chinese: [[讽刺]] (fěng cì)
 *Spanish: [[sarcasmo]]
 
 ===See Also===
