robot  Adding:nl <moratorium#96517>

--- a/wiki/moratorium.wikitext
+++ b/wiki/moratorium.wikitext
@@ -12,3 +12,5 @@ First attested [[w:1875|1875]], from neuter of {{LL.}} [[moratorius]] "delaying"
 
 ===Translations===
 *Russian: [[мораторий]] '''m'''
+
+[[nl:moratorium]]
