--- a/wiki/fuckwad.wikitext
+++ b/wiki/fuckwad.wikitext
@@ -4,9 +4,9 @@
 '''fuckwad'''
 
 # {{vulgarslang}} Nearly synonymous with [[fuckload]], but perhaps more used for measuring than counting
-#: ''That's going to cost a fuckwad of money''
-
-2. {{vulgarslang}} A derogatory slur or insult to denote someone of sub-standard intelligence. Similar in usage to [[dipshit]]. #: ''He put his shoes on the wrong feet and what!?! What a fuckwad.''
+#: ''That's going to cost a fuckwad of money''.
+# {{vulgarslang}} A derogatory slur or insult to denote someone of sub-standard intelligence. Similar in usage to [[dipshit]]
+#: "''He put his shoes on the wrong feet!?! What a fuckwad.''"
 
 ===Related Terms===
 *[[fuck]]
