robot  Adding:gl <abort#510>

--- a/wiki/abort.wikitext
+++ b/wiki/abort.wikitext
@@ -24,5 +24,6 @@ Latin ''[[abortare]]'', from ''[[abortus]]'', past participle of ''[[aboriri]]''
 *Thai: ยกเลิก
 
 [[de:Abort]]
+[[gl:Abort]]
 [[it:abort]]
 [[sv:abort]]
