robot  Adding:pt <above-mentioned#534>

--- a/wiki/above-mentioned.wikitext
+++ b/wiki/above-mentioned.wikitext
@@ -7,3 +7,5 @@
 *[[French]]: [[susmentionné]]
 *[[Indonesian]]: tersebut di atas, dijelaskan di atas
 *[[Japanese]]: [[上述]] ([[じょうじゅつ]], jōjutsu), [[上で述べた]] ([[うえでのべた]], ue-de-nobeta)
+
+[[pt:Above-mentioned]]
