robot  Adding:pt <abrade#540>

--- a/wiki/abrade.wikitext
+++ b/wiki/abrade.wikitext
@@ -8,3 +8,5 @@ present participle and verbal noun: '''[[Abrading]]'''
 Old English [[abraiden]]
 ====Transitive verb====
 #''(Obsolete):'' Variant spelling of [[Abraid]]
+
+[[pt:Abrade]]
