robot  Adding:pt,gl <above#530>

--- a/wiki/above.wikitext
+++ b/wiki/above.wikitext
@@ -109,5 +109,8 @@ Above (over) <i>[[Preposition]]</i>
 * Spanish: [[Sobre]]
 * Swedish: [[ovan]]
 
-[[it:above]]
 [[Category:Positive words]]
+
+[[gl:Above]]
+[[it:above]]
+[[pt:Above]]
