robot  Adding:gl <about#528>

--- a/wiki/about.wikitext
+++ b/wiki/about.wikitext
@@ -80,6 +80,7 @@ Old English ''aboute'', ''abouten'', ''abuten''; Anglo-Saxon ''&#257;butan'', ''
 [[Category:English prepositions]]
 [[Category:100 English basic words]]
 
+[[gl:About]]
 [[it:about]]
 [[pt:About]]
 [[ru:About]]
