--- a/wiki/mouiller.wikitext
+++ b/wiki/mouiller.wikitext
@@ -1,2 +1,4 @@
 The word "Mouiller" in french means to wet and impregnate as well as to plunge into water.
 From latin mollis,(meaning flappy, spongy)describing the area where a spring flows.
+
+[[fr:mouiller]]
