--- a/wiki/motto.wikitext
+++ b/wiki/motto.wikitext
@@ -10,3 +10,8 @@
 # ''(Heraldry):'' A sentence, phrase, or word, forming part of an heraldic achievment.
 # A sentence, phrase, or word, prefixed to an essay, discourse, chapter, canto, or the like, suggestive of its subject matter; a short, suggestive expression of a guiding principle; a maxim.
 #:''"It was the '''motto''' of a bishop eminent for his piety and good works, ... Serve God, and be cheerful."'' -Addison.
+
+[[de:Motto]]
+[[it:motto]]
+[[nl:motto]]
+[[pl:Motto]]
