robot  Adding:gl,nl <absence#2856>

--- a/wiki/absence.wikitext
+++ b/wiki/absence.wikitext
@@ -28,5 +28,7 @@ French, from Latin ''absentia''. See [[Absent]]
 *[[Portuguese]]: [[Ausência]]
 *[[Spanish]]: [[Ausencia]]
 
+[[gl:Absence]]
 [[it:absence]]
+[[nl:absence]]
 [[pt:Absence]]
