robot  Adding:nl <mucus#43600>

--- a/wiki/mucus.wikitext
+++ b/wiki/mucus.wikitext
@@ -56,3 +56,5 @@ From Proto-Indo-European ''*meu-k-'' "slimy, slippery".  Cognates include Ancien
 ===Derived terms===
 *[[mucedo|mūcēdō]]
 *[[mucidus|mūcidus]]
+
+[[nl:mucus]]
