not a stub <concomitance#99306>

--- a/wiki/concomitance.wikitext
+++ b/wiki/concomitance.wikitext
@@ -3,7 +3,5 @@
 First attested [[w:1607|1607]], from [[French]] [[concomitant]], from [[Latin]] [[concomitari]] ''accompany'', from [[con-]] ''together'' + [[comitari]] ''to company'', from [[comes]], [[comitis]] "companion".
 ====Noun====
 '''Concomitance'''
-#occurrence or existence together or in connection with one another
+# [[occurrence]] or [[existence]] [[together]] or in [[connection]] with one another
 #a [[concomitant]]
-
-{{stub}}
