robot  Adding:gl <absorb#2865>

--- a/wiki/absorb.wikitext
+++ b/wiki/absorb.wikitext
@@ -44,5 +44,6 @@ Present participle: [[Absorbing]])
 *[[Romanian]]: [[a absorbi]]
 *[[Spanish]]: [[absorber]]
 
+[[gl:Absorb]]
 [[it:absorb]]
 [[pt:Absorb]]
