--- a/wiki/absolve.wikitext
+++ b/wiki/absolve.wikitext
@@ -21,4 +21,6 @@ Present participle: [[Absolving]]
 *We speak of a person as ''exonerated'', when he is [[released]] from some burden which had rested upon him; as, to ''exonerate'' from [[suspicion]], to ''exonerate'' from blame or [[odium]]. It implies a [[purely]] moral acquittal. 
 *We speak of a person as ''acquitted'', when a decision has been made in his favor with reference to a specific charge, either by a jury or by [[disinterested]] persons; as, he was ''acquitted'' of all [[participation]] in the crime.
 
+[[gl:Absolve]]
 [[it:absolve]]
+[[pt:Absolve]]
