--- a/wiki/twit.wikitext
+++ b/wiki/twit.wikitext
@@ -3,5 +3,7 @@
 ===[[noun]]===
 #a reproach.
 #a foolish and annoying person.
+#an acronym for the podcast "This Week In Tech".
+#a goldfish laden with eggs.
 ===[[verb]]===
 :to reproach; to point out a fault or mistake.
