--- a/wiki/abstinence.wikitext
+++ b/wiki/abstinence.wikitext
@@ -32,3 +32,5 @@ From the Persian ''ab'', [[water]], and ''stein'', or [[tankard]]. Hence, water 
 *[http://www.livescience.com/humanbiology/050318_virginity_pledge.html The Downside to Virginity Pledges]
 
 {{Webster}}
+
+[[gl:Abstinence]]
