robot  Adding:fr <abstrait#49964>

--- a/wiki/abstrait.wikitext
+++ b/wiki/abstrait.wikitext
@@ -3,3 +3,5 @@
 '''abstrait''' ''m'' (''f'' '''abstraite''', ''m plural'' '''abstraits''', ''f plural'' '''abstraites''')
 
 #[[abstract]]
+
+[[fr:abstrait]]
