--- a/wiki/%E3%81%A9%E3%82%93.wikitext
+++ b/wiki/%E3%81%A9%E3%82%93.wikitext
@@ -1,6 +1,10 @@
 ==Japanese==
 
+=== Pronunciation ===
+*[[w:AHD|AHD]]: dōn
+
 === Noun ===
+'''どん''' (''[[uncountable]]'')
 # A sound made by one object hitting another.
 # A word used to indicate the start of a race or competition.
 
