robot  Adding:hu <muscle#41883>

--- a/wiki/muscle.wikitext
+++ b/wiki/muscle.wikitext
@@ -31,6 +31,8 @@
 *Russian: [[мускул]] ''m'' (muskul)
 *Spanish: [[músculo]] ''m''
 
+[[Category:1000 English basic words]]
+
 [[et:Muscle]]
 [[it:muscle]]
-[[Category:1000 English basic words]]
+[[hu:muscle]]
